# banksync-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  glama.json  server.json  smithery.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml  release.yml
docs/: AGENTS.md  ARCHITECTURE.md  TOOLS.md
mcpb/: manifest.json  package.json
mcpb/server/: index.js
python/: CHANGELOG.md  README.pypi.md  pyproject.toml
python/banksync_mcp/: __init__.py  server.py
python/tests/: test_server.py
typescript/: CHANGELOG.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
typescript/src/: index.test.ts  index.ts
