[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "banksync-mcp"
version = "1.0.0"
description = "BankSync MCP server — connect AI agents to bank accounts, transactions, balances, and investment data"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "BankSync", email = "hello@banksync.io" },
]
keywords = [
    "mcp",
    "mcp-server",
    "banksync",
    "banking",
    "financial-data",
    "transactions",
    "ai-agent",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
banksync-mcp = "banksync_mcp.server:main"

[project.urls]
Homepage = "https://banksync.io"
Documentation = "https://banksync.io/developers"
Repository = "https://github.com/banksynchq/mcp"
Issues = "https://github.com/banksynchq/mcp/issues"
